test/libsolidity/syntaxTests/pragma/broken_version_4.sol
pragma solidity (8.0.0);
// ----
// ParserError 1684: (0-24): Invalid version pragma. Expected the start of a version number but instead found character '('. Version number is invalid or the pragma is not terminated with a semicolon.
